Added : new classes.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
-		<link href="css/build.css" rel="stylesheet" media="screen">
-		<link href="css/style.css" rel="stylesheet" media="screen">
 
-		<!--<link src="http://localhost:8080/build.css" rel="stylesheet" media="screen">-->
+		<link href="css/vaahcss.css" rel="stylesheet" media="screen">
+
+
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" rel="stylesheet" media="screen">
+		<link href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css" rel="stylesheet" media="screen">
 
 
 	</head>
